# quine

./: .gitignore  Cargo.toml  README.md  flake.nix
.paul/: HANDOFF-2026-06-06.md  HANDOFF-2026-06-08.md  PROJECT.md  ROADMAP.md  STATE.md
.paul/handoffs/archive/: HANDOFF-2026-06-03.md  HANDOFF-2026-06-07.md  HANDOFF-2026-06-08.md  (+1 more)
docs/: grammar.pest
examples/: core_ir.quine  edge.quine  ir_type.quine  linear_anf.quine  merge_test.quine  rvsdg.quine  test.quine  test1.quine  test2.quine
quine-cli/: Cargo.toml
quine-cli/src/: main.rs  pest_parser.rs
quine-cli/tests/syntax_tests/: cost.rs  cost_analysis.rs  extract.rs  extract_eval.rs  extract_let.rs  extract_optimal.rs  main.rs
quine-core/: Cargo.toml
quine-core/src/: atom.rs  common.rs  lib.rs  related_egraph.rs  reverse_index.rs  rule.rs  table.rs  term.rs  types.rs  uf.rs
quine-core/tests/: reverse_index.rs
quine-frontend/: Cargo.toml
quine-frontend/src/: env.rs  error.rs  interner.rs  lib.rs  prelude.rs  syntax.rs  term.rs
quine-solver/: Cargo.toml
quine-solver/src/: dag.rs  formulation.rs  lib.rs  relaxation.rs  solver.rs
quine-solver/tests/: exhaustive_verify.rs  property_tests.rs  scenarios.rs
src/: check_and_compile.rs  common.rs  context.rs  env.rs  error.rs  lib.rs  main.rs  modules.rs  pest_parser.rs  regraph.rs  rule.rs  syntax.rs  table.rs  typecheck.rs  types.rs  uf.rs
src/core/: command.rs  mod.rs  regraph.rs  rule.rs  table.rs
src/engine/: command.rs  env.rs  error.rs  interner.rs  mod.rs  prelude.rs  term.rs
src/frontend/: body2action.rs  check_and_compile.rs  env.rs  error.rs  head2flat_clause.rs  head2query.rs  mod.rs  syntax.rs  syntax2flat_clause.rs  utils.rs
src/min_parser/: core_syntax.rs  mod.rs
src/regraph/: common.rs  mod.rs  regraph.rs  related_egraph.rs  rule.rs  table.rs  types.rs  uf.rs
src/syntax/: mod.rs  pest_parser.rs
supply-chain/: audits.toml  config.toml
(+58 files in other folders)
