[package]
name = "quine"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["quine-core", "quine-frontend"]

[workspace.dependencies]
smallvec = "1.15.1"
rustc-hash = "2.1.2"
rayon = "1.12.0"
quine-core = { path="./quine-core" }
quine-frontend = { path="./quine-frontend" }

[dependencies]
smallvec = { workspace = true }
rustc-hash = { workspace = true }
quine-core = { workspace = true, features = ["std"] }
quine-frontend = { workspace = true }
rayon = "1.12.0"
pest = { version = "2.7" }
pest_derive = { version = "2.7" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reedline = "0.47.0"
directories = "6.0.0"

[profile.release]
debug = true
lto = true
codegen-units = 1
panic = "abort"
split-debuginfo = "unpacked"
