[workspace]
resolver = "3"
members = ["quine-cli", "quine-core", "quine-frontend"]

[workspace.dependencies]
rustc-hash = "2.1.2"
quine-core = { path="./quine-core" }
quine-frontend = { path="./quine-frontend" }

[profile.release]
debug = true
lto = true
codegen-units = 1
panic = "abort"
split-debuginfo = "unpacked"
