[package]
name = "quine"
version = "0.1.0"
edition = "2024"

[dependencies]
quine-core = { workspace = true, features = ["std"] }
quine-frontend = { workspace = true }

pest = { version = "2.7" }
pest_derive = { version = "2.7" }

reedline = "0.47.0"
directories = "6.0.0"

[dev-dependencies]
smallvec = "1.15.1"
